Added "(Hidden)" to the token name when the name is hidden

--- a/lang/en.json
+++ b/lang/en.json
@@ -20,6 +20,8 @@
 
     "ActorSheetButton": "Configure name hiding for this actor",
 
+    "TokenName.Hidden": " (Hidden)",
+
     "Settings.HideHostileN": "Hide Hostile Names",
     "Settings.HideHostileH": "Hide Names of Actors with Token Disposition set to HOSTILE",
     "Settings.HideNeutralN": "Hide Neutral Names",
